crates/keron-lang/tests/corpus/errors/check/map_annotation_value_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 1:33
  |
1 | val m: Map<String, Int> = {"a": "wrong"}
  |                                 ^^^^^^^
